modules/grammars/ide/src/test/resources/cocos/valid/IncludeExcludedOtherParent.ide
package valid

ide IncludeExcludedOtherParent {
    registry "https://hub.docker.com/some/awesome/image:latest"
    build "some/amazing/path" resolved from ROOT

    include module type IncludeExcludedModule3
}
