modules/grammars/ide/src/test/resources/cocos/invalid/ExcludeIncludedOtherParent.ide
package invalid

ide ExcludeIncludedOtherParent {
    registry "https://hub.docker.com/some/awesome/image:latest"
    build "some/amazing/path" resolved from ROOT

    include module type ExcludeIncludedModule3
}
